# mental-heath-

./: BEFORE_AFTER.md  DEPLOY_OPTIONS.md  Dockerfile  FASTAPI_DEPLOYMENT_SOLUTION.md  MONGODB_SETUP.md  PROBLEM_SOLVED.md  QUICK_DEPLOY.md  VERCEL_HYBRID_GUIDE.md  app.py  main.py  pyproject.toml  test_entrypoint.py  vercel.json
api/: __init__.py  index.py
backend/: main.py  pyproject.toml  requirements.txt  requirements_all.txt  requirements_lite.txt  start_services.py  vercel.json
backend-express/: package-lock.json  package.json
backend/api/: index.py  requirements.txt
frontend/: next.config.js  package-lock.json  package.json
frontend/lib/: api.ts
