[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mental-health-app"
version = "1.0.0"
runtime = "python3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "motor",
    "pymongo",
    "python-dotenv",
    "pydantic"
]

[project.scripts]
app = "api.index:app"
