[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mindful-ai-backend"
version = "1.0.0"
description = "Mental Health AI Backend Services"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
    "transformers>=4.35.0",
    "torch>=2.1.0",
    "sentence-transformers>=2.2.2",
    "chromadb>=0.4.15",
    "langchain>=0.0.335",
    "motor>=3.3.2",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0"
]

[tool.setuptools]
packages = ["text_service", "voice_service", "face_service", "shared"]

[project.scripts]
app = "api.index:app"

